WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134561
REGRESSION (iOS WK2): arrow key movements don't work
https://bugs.webkit.org/show_bug.cgi?id=134561
Summary
REGRESSION (iOS WK2): arrow key movements don't work
Enrica Casucci
Reported
2014-07-02 14:38:00 PDT
This can be tested using a H/W keyboard connected to an iOS device. Type in any field on a page in Safari. Try to move the caret with the arrow keys. Nothing happens. <
rdar://problem/16827629
>
Attachments
Patch
(4.25 KB, patch)
2014-07-02 14:42 PDT
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch with fixed style
(4.27 KB, patch)
2014-07-02 14:58 PDT
,
Enrica Casucci
benjamin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(624.00 KB, application/zip)
2014-07-02 17:05 PDT
,
Build Bot
no flags
Details
Patch2
(10.74 KB, patch)
2014-07-07 13:55 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-07-02 14:42:29 PDT
Created
attachment 234282
[details]
Patch
WebKit Commit Bot
Comment 2
2014-07-02 14:44:46 PDT
Attachment 234282
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2221: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2227: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2233: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2239: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2245: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2251: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2257: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2263: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2269: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2275: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2281: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2287: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 12 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3
2014-07-02 14:58:13 PDT
Created
attachment 234285
[details]
Patch with fixed style
Build Bot
Comment 4
2014-07-02 17:05:07 PDT
Comment on
attachment 234285
[details]
Patch with fixed style
Attachment 234285
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5775174230081536
New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 5
2014-07-02 17:05:11 PDT
Created
attachment 234295
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Enrica Casucci
Comment 6
2014-07-07 13:55:27 PDT
Created
attachment 234509
[details]
Patch2
Enrica Casucci
Comment 7
2014-07-07 14:43:28 PDT
Committed revision 170858.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug