Source/WebKit2/UIProcess/ios/PageClientImplIOS.mm
@@ -350,6 +350,11 @@ void PageClientImpl::setDragImage(const IntPoint&, PassRefPtr<ShareableBitmap>, 
     notImplemented();
 }
 
+void PageClientImpl::selectionWillChange()
+{
+    [m_contentView _selectionWillChange];
+}
+
 void PageClientImpl::selectionDidChange()
 {
     [m_contentView _selectionChanged];
